[package]
name = "leptos-struct-table"
version = "0.13.0"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming"]
description = "Generate a complete batteries included leptos data table component from a struct definition."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "table", "data-sheet", "data-grid"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"

[dependencies]

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
rust_decimal = ["dep:rust_decimal"]
time = ["dep:time"]
i18n = ["leptos-struct-table-macro/i18n"]

[package.metadata."docs.rs"]
all-features = true
